chore: [PAGOPA-3273] Refactor code for optional transfer list in searchPaymentMethod API
