# src/main/java/it/gov/pagopa/afm/calculator/model/PaymentNoticeItemOptionalTransferList.java
@@ -2,8 +2,6 @@ package it.gov.pagopa.afm.calculator.model;
 
 import lombok.*;
 
-import javax.validation.Valid;
-import javax.validation.constraints.NotEmpty;
 import javax.validation.constraints.NotNull;
 import java.util.List;
 
@@ -12,13 +10,10 @@ import java.util.List;
 @Data
 @Builder
 @ToString
-public class PaymentNoticeItem {
+public class PaymentNoticeItemOptionalTransferList {
     @NotNull
     private Long paymentAmount;
     @NotNull
     private String primaryCreditorInstitution;
-    @Valid
-    @NotNull
-    @NotEmpty
     private List<TransferListItem> transferList;
 }
